# SuryaBench

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md
CoronalExtrapolation/: README.md  dataloader.py  make_train_test_index.py  requirements.txt  train_baseline.py
CoronalExtrapolation/ds_configs/: config_attention_unet.yaml  config_resnet_101.yaml  config_resnet_152.yaml  config_resnet_18.yaml  config_resnet_34.yaml  config_resnet_50.yaml  config_unet.yaml
CoronalExtrapolation/ds_models/: README.md  attention_unet.py  unet.py
CoronalExtrapolation/shell_scripts/: run_resnet152.pbs  run_resnet152.sh  run_resnet18.pbs  run_resnet34.sh  run_resnet50.pbs  run_unet.pbs  run_unet.sh
HelioFM/datasets/: helio.py  hiera_helio.py  transformations.py
HelioFM/utils/: io.py  (+6 more)
ar_emergence/: README.md  compute_stats.py  get_baselines.py  inference.py  train_baselines.py
ar_segmentation/: CMakeLists.txt  README.md  config.yaml  main.cpp
ar_segmentation/dataloader/: ar.py
ar_segmentation/docker/: dockerfile
ar_segmentation/include/: io.hpp  utils.hpp
ar_segmentation/index_file/: ar_index_creator.py
ar_segmentation/scripts/: fulldisklist.txt  main_code_runner.sh
ar_segmentation/src/: io.cpp  utils.cpp
euv_spectra/: README.md  euv_data_sampler.py  euv_wavelengths.csv  eve_dataloader.py  prepare_data.ipynb  train_baseline.py
flare/: README.md  flare.py  flare_index_creator.py
solarwind/: README.md  dataloader.py  download_solar_wind_data.sh  download_sw_data.py  plot_omni_csvs.py  remove_icme_omni.py  split_omni_icme.py  split_trainValTest.py  train_baseline.py
(+55 files in other folders)
